--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+:root {
+  --sidebar-width: 150px;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
+  font-family: "Lato", sans-serif;
 }
 
 .App {
   min-height: 100vh;
-  /* border: 2px solid green; */
 }
