--- a/src/Forms/Form.css
+++ b/src/Forms/Form.css
@@ -27,7 +27,9 @@ form input[type="radio"] {
   background-color: white;
   border-radius: 0.25rem;
   cursor: pointer;
-  margin-bottom: 0.5rem;
+  /* margin: 0 0 0.25rem 0.5rem;
+  margin-bottom: 0.5rem; */
+  margin: 0 0.5rem 0.5rem 0;
 }
 
 .form-btn:hover {
