--- a/src/Forms/Form.css
+++ b/src/Forms/Form.css
@@ -11,9 +11,25 @@ form input {
   display: block;
 }
 
+form input {
+  border: 1px solid black;
+  border-radius: 2.5px;
+  padding: 0.2rem;
+  font-size: 0.8rem;
+}
+
+form input:focus {
+  border: 1px solid darkgoldenrod;
+  outline: none;
+}
+
 form input[type="radio"] {
   display: inline;
   margin-right: 0.25rem;
+}
+
+form input[type="radio"]:focus {
+  outline: 1px solid darkgoldenrod;
 }
 
 .form-error {
@@ -27,12 +43,18 @@ form input[type="radio"] {
   background-color: white;
   border-radius: 0.25rem;
   cursor: pointer;
-  /* margin: 0 0 0.25rem 0.5rem;
-  margin-bottom: 0.5rem; */
   margin: 0 0.5rem 0.5rem 0;
+  font-family: inherit;
+  font-size: 0.8rem;
 }
 
 .form-btn:hover {
+  background-color: antiquewhite;
+}
+
+.form-btn:focus {
+  border: 1px solid darkgoldenrod;
+  outline: none;
   background-color: antiquewhite;
 }
 
